[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/UI/SimpleBox.tres" type="Theme" id=1]
[ext_resource path="res://src/Game/Game.gd" type="Script" id=2]
[ext_resource path="res://assets/SFX/gemmove.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/Fonts/Watermelon Days.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/SFX/gembreak.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/SFX/tick.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/SFX/badmove.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/SFX/combo_2.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/SFX/combo_3.ogg" type="AudioStream" id=9]
[ext_resource path="res://assets/SFX/combo_6.ogg" type="AudioStream" id=10]
[ext_resource path="res://assets/SFX/combo_4.ogg" type="AudioStream" id=11]
[ext_resource path="res://assets/SFX/combo_5.ogg" type="AudioStream" id=12]
[ext_resource path="res://assets/SFX/combo_7.ogg" type="AudioStream" id=13]
[ext_resource path="res://assets/SFX/gameover.ogg" type="AudioStream" id=14]
[ext_resource path="res://assets/SFX/nextlevel.ogg" type="AudioStream" id=15]
[ext_resource path="res://src/Game/Objects/MusicPlayer.tscn" type="PackedScene" id=16]

[sub_resource type="DynamicFont" id=2]
size = 88
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 4 )

[node name="Game" type="Node"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 60.0
margin_top = -500.0
margin_right = 510.0
margin_bottom = 500.0
theme = ExtResource( 1 )

[node name="Title" type="Label" parent="CanvasLayer/Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -195.5
margin_top = 20.0
margin_right = 195.5
margin_bottom = 121.0
custom_fonts/font = SubResource( 2 )
text = "Crystal dash"

[node name="LevelText" type="Label" parent="CanvasLayer/Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -220.0
margin_top = -775.0
margin_right = 218.0
margin_bottom = -691.0
custom_fonts/font = SubResource( 1 )
text = "Level: 1"
align = 1

[node name="TimeText" type="Label" parent="CanvasLayer/Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -221.0
margin_top = -675.0
margin_right = 220.0
margin_bottom = -591.0
custom_fonts/font = SubResource( 1 )
text = "Time: 0"
align = 1

[node name="ScoreText" type="Label" parent="CanvasLayer/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -221.0
margin_right = 220.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 1 )
text = "Score: 0"
align = 1
valign = 1

[node name="HiText" type="Label" parent="CanvasLayer/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -226.0
margin_top = 150.0
margin_right = 222.0
margin_bottom = 263.0
custom_fonts/font = SubResource( 4 )
text = "next highscore:
-"
align = 1
valign = 1

[node name="LoopText" type="Label" parent="CanvasLayer/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.0
margin_top = 270.0
margin_right = 223.0
margin_bottom = 325.0
custom_fonts/font = SubResource( 4 )
text = "Loop music: off"
align = 1
valign = 1

[node name="QuitButton" type="Button" parent="CanvasLayer/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = 360.0
margin_right = 65.0
margin_bottom = 421.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 3 )
text = "menu"

[node name="Field" type="Panel" parent="CanvasLayer"]
anchor_left = 0.603
anchor_top = 0.5
anchor_right = 0.603
anchor_bottom = 0.5
margin_left = -507.76
margin_top = -505.0
margin_right = 507.24
margin_bottom = 505.0
mouse_filter = 2
theme = ExtResource( 1 )

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer"]
margin_left = 1720.0
margin_top = 40.0
margin_right = 1870.0
margin_bottom = 1040.0
theme = ExtResource( 1 )
max_value = 50.0
value = 50.0
percent_visible = false

[node name="TimeTimer" type="Timer" parent="."]
autostart = true

[node name="GameTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Player" parent="." instance=ExtResource( 16 )]

[node name="SFX" type="Node" parent="."]

[node name="BadMove" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="GameOver" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 14 )
volume_db = -10.0

[node name="GemBreak" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 5 )
volume_db = -20.0

[node name="Move" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="Tick" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="Combo2" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 8 )
volume_db = -10.0

[node name="Combo3" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 9 )
volume_db = -15.0

[node name="Combo4" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 11 )
volume_db = -15.0

[node name="Combo5" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 12 )
volume_db = -15.0

[node name="Combo6" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 10 )
volume_db = -15.0

[node name="Combo7" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 13 )
volume_db = -15.0

[node name="NextLevel" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 15 )
volume_db = -20.0

[connection signal="pressed" from="CanvasLayer/Panel/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="timeout" from="TimeTimer" to="." method="_on_TimeTimer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
